# sfml-engine

./: CMakeLists.txt  README.md
src/: EventManager.cpp  EventManager.h  GUI.cpp  GUI.h  GameBoard.cpp  GameBoard.h  main.cpp
